<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:foreground="?android:selectableItemBackground">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <android.support.constraint.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="100dp" />

                <!-- 계정명 -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/guideline" />

                <!-- 아이디 -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/id"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/name" />

                <TextView
                    android:id="@+id/login_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/name" />

                <!-- 비밀번호 -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/password"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/login_id" />

                <TextView
                    android:id="@+id/login_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/login_id" />

                <!-- 주소 -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/address"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/login_password" />

                <TextView
                    android:id="@+id/url"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:autoLink="web"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/login_password" />

                <!-- 비고 -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/description"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/url" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/url" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>
</layout>